# Tetris

./: .gitignore  Block.cpp  Block.h  CMakeLists.txt  Game.cpp  Game.h  Gravity.cpp  Gravity.h  Grid.cpp  Grid.h  README.md  Render.cpp  Render.h  Window.cpp  Window.h  build.sh  config.toml  linux-requirement.sh  main.cpp
build-release/: Tetris
build-release/dependencies/fmt/: fmt-targets.cmake
dependence/include/GL/: eglew.h
dependence/include/glad/: glad.c  glad.h
resources/shaders/: compile.sh  shader.frag  shader.vert
src/: Ai.h  Block.cpp  Block.h  Game.cpp  Game.h  Generator.cpp  Generator.h  Gravity.cpp  Gravity.h  Grid.cpp  Grid.h  Tuner.h  UI.cpp  UI.h  Utility.cpp  Utility.h  main.cpp
